syntax = "proto3";

package user;

service UserService {
  rpc Signup (SignupRequest) returns (SignupResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc AccessToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message SignupRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string type = 5;
}

message SignupResponse {
  string message = 1;
  User user = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  User user = 2;
  string token = 3;
  string refreshToken = 4;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message LogoutRequest {
  string userId = 1;
}

message LogoutResponse {
  string message = 1;
}

message RefreshTokenRequest{
  string refreshToken = 1;
}

message RefreshTokenResponse{
  string accessToken = 1;
}